2008-10-25  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/main.c, src/plugins.c:
   Fix deprecated usage of g_win32_get_package_installation_directory(),
   pass NULL as package name.
 * src/main.c, src/plugins.c, src/plugindata.h:
   Add main_locale_init() to the plugin API.
 * src/callbacks.c:
   Fix updating of the value of the toolbar Goto line spinbutton.


2008-10-24  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * THANKS: Added Roland Baudin to list of contributors of translations.
 * data/html_entities.tags:
   Added some more HTML entities.


2008-10-23  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/filetypes.c:
   Add simple auto-detection for HTML files without proper extension.
 * geany.glade, src/callbacks.c, src/dialogs.c, src/dialogs.h,
   src/editor.c, src/editor.h, src/interface.c:
   Replace Goto line text entry field in the toolbar with a spin button.
   Remove dialogs_show_goto_line(), use the more generic
   dialogs_show_input_numeric() instead.
   Increase limit of the maximum line number from 99999 to 100000000.
 * doc/geany.html, doc/geany.txt, geany.glade, src/callbacks.c,
   src/interface.c, src/keyfile.c, src/plugindata.h, src/prefs.c,
   src/ui_utils.c, src/ui_utils.h:
   Add toolbar buttons for Cut, Copy, Paste and Delete (#2161750).


2008-10-22  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * data/html_entities.tags:
   Add a few more entities common in e.g. Spanish language.


2008-10-22  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/highlighting.c, data/filetypes.css:
   Change style for 'identifier3' to bold to be in sync with the
   other identifier styles.
 * tagmanager/general.h, tagmanager/tm_file_entry.c,
   tagmanager/tm_project.c, tagmanager/tm_symbol.c, tagmanager/tm_tag.c,
   tagmanager/tm_work_object.c:
   Add get_path_max() to get a sane value if PATH_MAX is not defined.
   Change code where PATH_MAX was used unnecessarily.