@@ -1223,10 +1223,9 @@ several options:</p>
 <p>Find All In Document will show a list of matching lines in the
 current document in the Messages tab of the Message Window. <em>Find All
 In Session</em> does the same for all open documents.</p>
-<p>Mark will set markers for all matching lines in the current document,
-if the Markers margin is visible. If not, the background colour of
-matching lines will be highlighted. Markers and highlighting can be
-removed by selecting the Remove Markers command from the Document menu.</p>
+<p>Mark will highlight all matches in the current document with a
+coloured box. These markers can be removed by selecting the
+Remove Markers command from the Document menu.</p>
 </div>
 <div class="section" id="change-font-in-search-dialog-text-fields">
 <h4><a class="toc-backref" href="#id52">Change font in search dialog text fields</a></h4>
@@ -4403,7 +4402,7 @@ USE OR PERFORMANCE OF THIS SOFTWARE.</p>
 <div class="footer">
 <hr class="footer" />
 <a class="reference external" href="geany.txt">View document source</a>.
-Generated on: 2008-10-23 20:49 UTC.
+Generated on: 2008-10-25 18:46 UTC.
 Generated by <a class="reference external" href="http://docutils.sourceforge.net/">Docutils</a> from <a class="reference external" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 
 </div>
