@@ -1557,7 +1557,7 @@ on_menu_remove_indicators1_activate    (GtkMenuItem     *menuitem,
 	GeanyDocument *doc = document_get_current();
 
 	if (doc != NULL)
-		editor_clear_indicators(doc->editor);
+		editor_clear_indicators_full(doc->editor, GEANY_INDICATOR_ERROR);
 }
 
 
@@ -1917,6 +1917,7 @@ on_remove_markers1_activate            (GtkMenuItem     *menuitem,
 
 	sci_marker_delete_all(doc->editor->sci, 0);	/* delete the yellow tag marker */
 	sci_marker_delete_all(doc->editor->sci, 1);	/* delete user markers */
+	editor_clear_indicators_full(doc->editor, GEANY_INDICATOR_SEARCH);
 }
 
 
